tests/functionalTests/invalid/code/selfAssignment.hs
main :: IO ();
main = do {
    x <- return (x + 7);
    putStr "Self assignment\n";
};